# hermes-cctv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  hermes-cctv  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: pr-title.yml  release.yml  test.yml
hermes_cctv/: __init__.py  camera.py  cctv.py  config_loader.py  control_reader.py  event_writer.py  motion.py  recorder.py
plugins/hermes-cctv/: __init__.py
scripts/: cctv-notify.py  daemon-ctl.sh  detect-cameras.py  snap.py
skills/hermes-cctv/: SKILL.md
tests/: test_config_loader.py  test_control_reader.py  test_event_writer.py  test_motion.py  test_recorder.py
