[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cctv"
version = "0.1.0"
description = "Cross-platform CCTV daemon with Hermes Agent gateway integration — captures camera, detects motion, records clips, and sends alerts via Telegram/Discord."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.10.0",
    "pyyaml>=6.0",
    "watchdog>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "numpy>=2.0",
]

[project.scripts]
hermes-cctv = "hermes_cctv.cctv:main"

# Only ship the daemon package. The repo also has top-level skills/ and
# plugins/ dirs (Hermes gateway assets, not importable modules), so flat-layout
# auto-discovery must be told explicitly which package to build.
[tool.setuptools]
packages = ["hermes_cctv"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["hermes_cctv"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "class .*Error",
]
